--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust-axum-web-template"
+name = "rust_axum_web_template"
 version = "0.1.0"
 edition = "2024"
 
@@ -14,3 +14,4 @@ tower-http = { version = "0.6.2", features = ["trace"] }
 wither = "0.9"
 dotenv = "0.15" 
 mongodb = { version = "3.2.2" }
+serde_json = "1.0.140"
